# AnkiAssistant

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  pyproject.toml
models/: CONTRIBUTING.md  CardMaker.py  CardMakerFin.py  CardMakerV2.py  CardMakerV3.py  card_outlines.json  cards.json  dataset.json  decks.json  tags.json  test.py
models/mdFiles/: 01.md  basicsOfEconomics.md  introToDataSci.md  introToML.md  test.md
models/runs/20250209_173710/: cards.json  outlines.json
models/runs/20250209_173943/: cards.json  outlines.json
models/runs/20250209_175335/: cards.json  outlines.json
models/runs/20250213_145325/: cards.json  outlines.json
models/runs/20250228_112429/: cards.json  outlines.json
models/runs/20250306_110756/: cards.json  outlines.json
models/runs/20250307_095817/: cards.json  outlines.json
web/: .env.example  .eslintrc.cjs  CONTRIBUTING.md  README.md  drizzle.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/docs/: AI-Integration.md
web/src/: env.js  local-db.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/chat/: page.tsx
web/src/components/anki/: all-decks.tsx  card-content.tsx  deck-list.tsx
web/src/components/selectors/: deck-selector.tsx  (+2 more)
web/src/hooks/: use-deck-creation.tsx  use-loading-states.tsx  use-toast.ts
web/src/lib/: anki.ts  auth.ts  ollama.ts  utils.ts
web/src/stores/: anki-store.ts  inference-store.ts  model-store.ts  note-type-store.ts  note-variant-store.ts  prompt-store.ts
web/src/styles/: globals.css
web/src/types/: connection-status.ts
(+72 files in other folders)
